@@ -9,18 +9,17 @@
     type: long
     description: >
       Count field records the number of times the particular event has occurred
+  - name: timestamp
+    type: group
     fields:
-    - name: timestamp
-      type: group
-      fields:
-      - name: first_occurrence
-        type: date
-        description: >
-          Timestamp of first occurrence of event
-      - name: last_occurrence
-        type: date
-        description: >
-          Timestamp of last occurrence of event
+    - name: first_occurrence
+      type: date
+      description: >
+        Timestamp of first occurrence of event
+    - name: last_occurrence
+      type: date
+      description: >
+        Timestamp of last occurrence of event
   - name: message
     type: keyword
     description: >
